# cru

./: CMakeLists.txt  README.md
cmake/: configure_manpages.cmake.in
devutils/: README.md  enumerate.in  renumber.in  reserve.in
docutils/: README.md  decls.in  errs.in
docutils/html/: 00_wrap.in  10_tags.in  20_quotes.in  60_titles.in  70_synof.in  README.md
docutils/nroff/: 10_breaks.in  20_antibreaks.in  30_dents.in  40_code.in  50_boil.in  README.md
include/cru/: cru.h  data_types.h  error_codes.h  function_types.h
man/man3/: cru_built.3.in  cru_class_of.3.in  cru_class_size.3.in  cru_composed.3.in  cru_connect.3.in  cru_crossed.3.in  cru_deduplicated.3.in  cru_edge_count.3.in  cru_fabricated.3.in  cru_filtered.3.in  cru_free_kill_switch.3.in  cru_free_later.3.in  cru_free_now.3.in  cru_free_partition.3.in  cru_get.3.in  cru_induced.3.in  cru_kill.3.in  cru_killed.3.in  cru_mapreduced.3.in  cru_merged.3.in  cru_mutated.3.in  cru_new_kill_switch.3.in  cru_partition_of.3.in  cru_postponed.3.in  cru_set.3.in  cru_singleton.3.in  cru_split.3.in  cru_spread.3.in  cru_strerror.3.in  cru_stretch.3.in  cru_stretched.3.in  cru_terminus_count.3.in  cru_united.3.in  cru_vertex_count.3.in
man/man7/: cru.7.in  cru_bop.7.in  cru_bpred.7.in  cru_builder.7.in  cru_cbop.7.in  cru_classifier.7.in  cru_composer.7.in  cru_connector.7.in  cru_cqop.7.in  cru_crosser.7.in  cru_ctop.7.in  cru_ctop_pair.7.in  cru_ctop_quad.7.in  cru_data_types.7.in  cru_destructor.7.in  cru_destructor_pair.7.in  cru_fabricator.7.in  cru_filter.7.in  cru_fold.7.in  cru_function_types.7.in  cru_hash.7.in  cru_inducer.7.in  cru_kernel.7.in  cru_mapreducer.7.in  cru_merger.7.in  cru_mutator.7.in  cru_nop.7.in  cru_order.7.in  cru_order_pair.7.in  cru_plan.7.in  cru_postponer.7.in  cru_prop.7.in  cru_prop_pair.7.in  cru_pruner.7.in  cru_qop.7.in  cru_qpred.7.in  cru_sig.7.in  cru_splitter.7.in  cru_stretcher.7.in  cru_subconnector.7.in  (+4 more)
src/: brig.c  brig.h  build.c  build.h  classes.c  classes.h  compose.c  compose.h  config.h.in  copy.c  copy.h  count.c  count.h  crew.c  crew.h  cross.c  cross.h  cthread.c  cthread.h  defo.c  defo.h  duplex.c  duplex.h  edges.c  edges.h  emap.c  emap.h  emu.c  emu.h  entry.c  errs.c  errs.h  fab.c  fab.h  filters.c  filters.h  getset.c  getset.h  graph.c  graph.h  (+54 more)
test/: build_00.c  build_01.c  build_02.c  build_03.c  build_04.c  build_05.c  class_00.c  class_01.c  compose_00.c  compose_01.c  compose_02.c  compose_03.c  compose_04.c  dedup_00.c  dedup_01.c  dedup_02.c  fabricate_00.c  fabricate_01.c  fabricate_02.c  fabricate_03.c  filter_00.c  filter_01.c  filter_02.c  filter_03.c  filter_04.c  filter_05.c  filter_06.c  induce_00.c  induce_01.c  ktest.in  mapreduce_00.c  merge_00.c  merge_01.c  merge_02.c  merge_03.c  mtest.in  mutate_00.c  mutate_01.c  mutate_02.c  mutate_03.c  (+24 more)
